<resources>
    <string name="app_name">Mercapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1246804862135786</string>
    <string name="fb_login_protocol_scheme">fb1246804862135786</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Logout">Cerrar Sesión</string>
    <string name="buscar_tiendas">buscar tiendas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrate_aqui">registrate aqui</string>
    <string name="hintemail">Email</string>
    <string name="default_client_id">id</string>
    <string name="not_log_in">No se pudo iniciar sesion</string>
    <string name="title_bienvenida">Bienvenido</string>
    <string name="title_ingreso">Ingresa!</string>
    <string name="txt_password">Password</string>
    <string name="title_iniciarsesion">Iniciar Sesión</string>
    <string name="no_tienes_cuenta">No tienes cuenta ?</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="precioP">precio</string>
    <string name="buscar_productos">Buscar productos</string>
    <string name="nombre_productos">Nombre Productos</string>
    <string name="tiendas">Tiendas</string>
</resources>
